{
    "name": "HeroInputAction",
    "maps": [
        {
            "name": "Hero",
            "id": "c620d24f-8561-4cb0-b192-54c01aaa66d6",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "3ec03c29-058f-495b-af6f-d55f42fc6aaf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SaySomething",
                    "type": "Button",
                    "id": "b155cc07-dacd-496f-901a-ec25394dab44",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "8096da76-27fa-4116-afc2-32a240a0bb9d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "35f7a37b-d864-4665-8655-155239c89fde",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4e4e52bf-50ab-486e-ae24-9a9408015e95",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d26e7e78-8b81-4864-96bb-67b8fd279901",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "cbe74283-ab2f-4f42-91a6-32a2f83692c3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1551a1f0-6327-41f0-b9bd-4a60051e6472",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SaySomething",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}